--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.haukeschnau.scedu">
    <application
-        android:label="scedu"
+        android:label="scedU"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
