--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "scedu",
-    "short_name": "scedu",
+    "name": "scedU",
+    "short_name": "scedU",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
