--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_fonts: ^2.1.1
   mobx: ^2.0.6+1
   flutter_mobx: ^2.0.3+2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
