--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +39,12 @@ dependencies:
   mobx: ^2.0.6+1
   flutter_mobx: ^2.0.3+2
   intl: ^0.17.0
+  schema_util:
+    path: ../dart_schema_util
+  sembast: ^3.1.1+1
+  path_provider: ^2.0.8
+  uuid: ^3.0.5
+  duration_picker: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +68,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - schema.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
